resolve 1.0, notification overflow fix

--- a/adminResolve.css
+++ b/adminResolve.css
@@ -9,59 +9,56 @@
     -webkit-transform: rotate(360deg);
 }
 
-.container{
+.container {
     align-items: center;
     justify-content: center;
 }
 
-.account{
+.account {
     color: black;
 }
 
-.account:link{
+.account:link {
     color: black;
 }
 
-.account:visited{
+.account:visited {
     color: black;
 }
 
-.account:hover{
+.account:hover {
     color: #8bc052;
 }
 
-.btn1{
+.btn1 {
     background-color: #9ed368;
     border-radius: 30px;
     border: 2px solid #9ed368;
     margin-left: 10px;
-    width: 120px;
+    width: 70px;
     height: 40px;
-    
 }
 
-.btn1:hover{
+.btn1:hover {
     background-color: #8bc052;
     color: black;
     border: 2px solid #8bc052;
-
 }
 
-.btn2{
+.btn2 {
     width: 120px;
     height: 40px;
     border: 2px solid;
     border-color: #8bc052;
     border-radius: 30px;
     margin-left: 10px;
-    
-}
-.btn2:hover{
-    background-color: #9ed368;
 }
 
+.btn2:hover {
+    background-color: #8bc052;
+}
 
-main{
+main {
     margin-left: 0px;
     margin-right: 0px;
     margin-top: 80px;
@@ -70,7 +67,7 @@ main{
     height: max-content;
 }
 
-.sidebar{
+.sidebar {
     width: 25vw;
     height: 80vh;
     display: flex;
@@ -80,7 +77,7 @@ main{
     border-right: 3px solid #8bc052;
 }
 
-.sidebtn{
+.sidebtn {
     width: 18vw;
     height: 15vh;
     background-color: #9ed368;
@@ -88,11 +85,11 @@ main{
     border-radius: 10px;
     font-size: 1.5rem;
 }
-.sidebtn img{
+.sidebtn img {
     width: 60px;
 }
 
-.sidebtn:hover{
+.sidebtn:hover {
     background-color: #8bc052;
 }
 
@@ -114,20 +111,19 @@ main{
   .content::-webkit-scrollbar-track {
     background-color: transparent; /* Background color of the scrollbar track */
   }
-.innercont{
+.innercont {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin-top: 50px;
-    
 }
-.innercont h1{
+.innercont h1 {
     margin-bottom: 100px;
 }
-.bar{
-    width: 40vw;
-    height: auto;
+.bar {
+    width: 50vw;
+    height: 125px;
     display: flex;
     justify-content: start;
     font-size: 15px;
@@ -135,89 +131,96 @@ main{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
     margin-bottom: 30px;
 }
+.bar button{
+    margin-left: auto;
+    border-radius: 0 10px 10px 0;
+    width: 100px;
+    border: none;
+    background-color: rgb(176, 212, 122);
+}
 
-.bar:hover{
+.bar:hover {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
     transition: 0.3s ease-in-out;
 }
-.bar1{
+.bar1 {
     margin-left: 20px;
     padding-top: 10px;
+    width: 190px;
 }
 
-.bar12{
+.bar12 {
     display: flex;
     justify-content: space-between;
 }
-.bar2{
+.bar2 {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-left: 1vw;
-    padding-top: 3px;
+    
+    padding-top: 5px;
+    width: 590px;
 }
 
-.links{
+.links {
     color: white;
     text-decoration: none;
 }
 
-.links:visited{
+.links:visited {
     color: white;
     text-decoration: none;
 }
 
-.links:hover{
+.links:hover {
     text-decoration: underline;
 }
 
-@media  (max-width:600px) {
-    main{
+@media (max-width: 600px) {
+    main {
         margin-top: 0px;
         flex-direction: column;
     }
-    .sidebar{
+    .sidebar {
         width: 100vw;
         border: none;
         justify-content: center;
         align-items: center;
         height: 50vh;
     }
-    .sidebtn{
+    .sidebtn {
         margin-top: 10px;
-        width: 40vw;
-        height: 10vh;
-        
+        width: 50vw;
+        height: 15vh;
+
         font-size: 1rem;
-        
     }
-    .sidebtn img{
+    .sidebtn img {
         width: 10vw;
     }
-    .innercont{
+    .innercont {
         margin-top: 40px;
         width: 100vw;
     }
-    .innercont h1{
+    .innercont h1 {
         margin-bottom: 30px;
     }
-    .bar{
+    .bar {
         width: 97vw;
         justify-content: space-between;
         height: 150px;
     }
-    .bar p{
+    .bar p {
         display: block;
     }
 
-    .bar1{
+    .bar1 {
         margin-top: 30px;
         display: block;
-        
     }
-    .bar2{
-       padding-left:20px ;
-       padding-right:10px ;
+    .bar2 {
+        padding-left: 20px;
+        padding-right: 10px;
     }
 }
-
